[package]
name = "hiera-ctp"
version = "0.1.0"
authors = ["kgignatyev <kgignatyev@gmail.com>"]
edition = "2018"

[features]

derive=["serde/derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.16"
serde_json = "1.0.39"
serde_derive = "1.0.91"
serde = "1.0.91"
base64 = "0.10.1"
state = "0.2"

