[package]
name = "hiera-ctp"
version = "0.1.0"
authors = ["kgignatyev <kgignatyev@gmail.com>"]
edition = "2018"

[features]

derive=["serde/derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="0.12.0" , features = ["blocking"]}
serde_json = "1.0.114"
serde_derive = "1.0.197"
serde = "1.0.197"
base64 = "0.22.0"
state = "0.6.0"

